Added dependencies to assembly definition

--- a/Assets/Editor/model-colour-editor.Editor.asmdef
+++ b/Assets/Editor/model-colour-editor.Editor.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "model-colour-editor.Editor",
-    "references": [],
+    "references": [
+        "Unity.EditorCoroutines.Editor"
+    ],
     "includePlatforms": [
         "Editor"
     ],
