--- a/Editor/model-colour-editor.Editor.asmdef
+++ b/Editor/model-colour-editor.Editor.asmdef
@@ -12,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.editorcoroutines",
+            "expression": "",
+            "define": "EDITOR_COROUTINES"
+        }
+    ],
     "noEngineReferences": false
 }
