Added check for Editor Coroutines package in case the package was installed into the Assets folder and the dependency wasn't resolved. Added button to install the dependency from Model Colour Editor settings.

--- a/Assets/Editor/model-colour-editor.Editor.asmdef
+++ b/Assets/Editor/model-colour-editor.Editor.asmdef
@@ -12,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.editorcoroutines",
+            "expression": "",
+            "define": "EDITOR_COROUTINES"
+        }
+    ],
     "noEngineReferences": false
 }
